Issue #5043: Fix low contrast for primary tabs in Seven.
By @indigoxela, @ericvanderwal, and @klonos.

--- a/core/themes/seven/css/style.css
+++ b/core/themes/seven/css/style.css
@@ -290,7 +290,7 @@ ul.primary li.active a,
   border: none;
   overflow: visible;
   line-height: 1;
-  color: #757575;
+  color: #606060;
   font-weight: normal;
   background-color: #DBDBD9;
   transition:
